force-app/main/default/objects/SurveyPCA__c/SurveyPCA__c.object-meta.xml
<CustomObject>
    <label>Survey PCA</label>
    <nameField>
        <label>Survey PCA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey PCA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>