force-app/main/default/objects/SurveyPCA__c/fields/AccountDealer__c.field-meta.xml
<CustomField>
    <fullName>AccountDealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountDealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Survey PCA (AccountDealer)</relationshipLabel>
    <relationshipName>Survey_PCA_Dealer</relationshipName>
    <type>Lookup</type>
</CustomField>