force-app/main/default/objects/SurveyPCA__c/fields/Question_10_1__c.field-meta.xml
<CustomField>
    <fullName>Question_10_1__c</fullName>
    <inlineHelpText>10.1 - Has the dealer resolved the problem(s)? (Select 1)</inlineHelpText>
    <label>Question 10.1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Yes_No</valueSetName>
    </valueSet>
</CustomField>