force-app/main/default/objects/SurveyPCA__c/fields/Question_10_2__c.field-meta.xml
<CustomField>
    <fullName>Question_10_2__c</fullName>
    <inlineHelpText>10.2 - We are very sorry that you have not had a satisfactory experience with the PCA Sales at Revzone. Would you like Revzone to make contact with you over the resolution of the problem? (Select 1)</inlineHelpText>
    <label>Question 10.2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Point_1_to_10</valueSetName>
    </valueSet>
</CustomField>