force-app/main/default/objects/SurveyPCA__c/fields/Question_10__c.field-meta.xml
<CustomField>
    <fullName>Question_10__c</fullName>
    <inlineHelpText>10 - Do you have any problem(s) during the purchase PCA Revzone? (Select 1)</inlineHelpText>
    <label>Question 10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Yes_No</valueSetName>
    </valueSet>
</CustomField>