force-app/main/default/objects/SurveyPCA__c/fields/Question_11__c.field-meta.xml
<CustomField>
    <fullName>Question_11__c</fullName>
    <inlineHelpText>11 - Treatment of you as a valued customer? (Select 1)</inlineHelpText>
    <label>Question 11</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Point_1_to_10</valueSetName>
    </valueSet>
</CustomField>