force-app/main/default/objects/SurveyPCA__c/fields/Question_12__c.field-meta.xml
<CustomField>
    <fullName>Question_12__c</fullName>
    <inlineHelpText>12 - Efforts made to provide you with a hassle-free experience? (Select 1)</inlineHelpText>
    <label>Question 12</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Point_1_to_10</valueSetName>
    </valueSet>
</CustomField>