force-app/main/default/objects/SurveyPCA__c/fields/Score_10_1__c.field-meta.xml
<CustomField>
    <fullName>Score_10_1__c</fullName>
    <formula>IF( 
   (TEXT(  Question_10_1__c ) = &apos;Có&apos; || TEXT(  Question_10_1__c ) = &apos;Yes&apos;)
 , 10
 , IF( (TEXT(  Question_10_1__c ) = &apos;Không&apos; || TEXT(  Question_10_1__c ) = &apos;No&apos;),1,0) 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score 10.1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>