force-app/main/default/objects/SurveyPCA__c/fields/Score_10__c.field-meta.xml
<CustomField>
    <fullName>Score_10__c</fullName>
    <formula>IF( (TEXT(  Question_10__c ) = &apos;Có&apos; || TEXT(  Question_10__c ) = &apos;Yes&apos;) , 10, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>