force-app/main/default/objects/SurveyPCA__c/fields/Score_12__c.field-meta.xml
<CustomField>
    <fullName>Score_12__c</fullName>
    <formula>VALUE( TEXT(  Question_12__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>