force-app/main/default/objects/SurveyPCA__c/fields/VAT_Date__c.field-meta.xml
<CustomField>
    <fullName>VAT_Date__c</fullName>
    <label>VAT Date</label>
    <type>Date</type>
</CustomField>